[gd_scene load_steps=13 format=3 uid="uid://bsfehnuvqqial"]

[ext_resource type="Script" uid="uid://cq2sihlxyr00n" path="res://telas/interface/opcoes/tela_opcoes.gd" id="1_brw4w"]
[ext_resource type="Texture2D" uid="uid://c173aqpwceala" path="res://assets/imagens/interface/background_inicio.png" id="2_brw4w"]
[ext_resource type="Theme" uid="uid://b511ckv5t4uuq" path="res://assets/temas/tema_padrao.tres" id="3_ondap"]
[ext_resource type="Texture2D" uid="uid://8lgun1lam1b2" path="res://assets/imagens/interface/mascote_pensando.png" id="4_0cs76"]
[ext_resource type="Texture2D" uid="uid://ctdxjry75j3np" path="res://assets/imagens/interface/nuvem_opcoes.png" id="5_ondap"]
[ext_resource type="Texture2D" uid="uid://sco4e0cuo658" path="res://assets/imagens/interface/nuvem.png" id="6_eyhje"]

[sub_resource type="Animation" id="Animation_3xww5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eyhje"]
resource_name = "fade_out"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crx1h"]
_data = {
&"RESET": SubResource("Animation_3xww5"),
&"fade_out": SubResource("Animation_eyhje")
}

[sub_resource type="Animation" id="Animation_3g3ye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.77]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:offset_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [31.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:offset_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-230.6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:offset_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [279.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:offset_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}

[sub_resource type="Animation" id="Animation_3kkkp"]
resource_name = "sair_tela"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.77]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:offset_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [49.0, -201.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:offset_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-258.6, 171.4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:offset_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [297.0, 47.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:offset_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-43.0, 387.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k45ix"]
_data = {
&"RESET": SubResource("Animation_3g3ye"),
&"sair_tela": SubResource("Animation_3kkkp")
}

[node name="TelaOpcoes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brw4w")

[node name="TexturaFundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_brw4w")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.222
anchor_top = 0.315
anchor_right = 0.778
anchor_bottom = 0.685
offset_left = 0.159988
offset_top = 0.160004
offset_right = -0.160034
offset_bottom = -0.160034
grow_horizontal = 2
grow_vertical = 2

[node name="GridBotoes" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme = ExtResource("3_ondap")
theme_override_constants/separation = 40

[node name="Botao" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "É um botão"

[node name="BotaoCreditos" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Créditos"

[node name="BotaoVoltar" type="Button" parent="MarginContainer/GridBotoes"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Voltar"

[node name="TexturaNuvem" type="TextureRect" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.000111108
anchor_right = 1.028
anchor_bottom = 0.284
offset_left = 0.079998
offset_right = -0.0800781
offset_bottom = 0.279999
grow_horizontal = 2
texture = ExtResource("6_eyhje")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TexturaOpcoes" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.028
anchor_bottom = 0.284
offset_left = 0.079998
offset_right = -0.0800781
offset_bottom = 0.279999
grow_horizontal = 2
texture = ExtResource("5_ondap")
expand_mode = 2

[node name="AnimacaoOpcoes" type="AnimationPlayer" parent="TexturaOpcoes"]
libraries = {
&"": SubResource("AnimationLibrary_crx1h")
}
speed_scale = 2.5

[node name="TexturaUrso" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.77
anchor_right = 0.3
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -230.6
offset_right = 279.0
offset_bottom = -15.0
grow_vertical = 0
rotation = 0.523599
texture = ExtResource("4_0cs76")
expand_mode = 2

[node name="AnimacaoUrso" type="AnimationPlayer" parent="TexturaUrso"]
libraries = {
&"": SubResource("AnimationLibrary_k45ix")
}
speed_scale = 2.5

[connection signal="pressed" from="MarginContainer/GridBotoes/BotaoVoltar" to="." method="_on_botao_voltar_pressed"]
[connection signal="animation_finished" from="TexturaUrso/AnimacaoUrso" to="." method="_on_animacao_urso_animation_finished"]
[connection signal="animation_started" from="TexturaUrso/AnimacaoUrso" to="." method="_on_animacao_urso_animation_started"]
